various refactoring of utility methods